finished up creating features for phase two questions. created new pickle

--- a/prepare.ipynb
+++ b/prepare.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "7234b793",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 14,
    "id": "649d33d1",
    "metadata": {},
    "outputs": [],
@@ -91,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 15,
    "id": "0776fac1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = acquire()"
+    "#df = acquire()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 16,
    "id": "6fc1b1e3",
    "metadata": {},
    "outputs": [],
@@ -120,27 +120,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "438981a9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2054, 37)"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "f84c69c9",
    "metadata": {},
@@ -150,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 17,
    "id": "f11f6eb5",
    "metadata": {},
    "outputs": [],
@@ -170,8 +149,6 @@
     "        duration += '00M00S'\n",
     "    elif 'M' not in duration:\n",
     "        duration = list(duration)\n",
-    "        print('stop')\n",
-    "        print(list(duration))\n",
     "        duration.insert(-3, '00M') if len(duration) > 6 else duration.insert(-2, '00M')\n",
     "        duration = ''.join(duration)\n",
     "    elif 'S' not in duration:\n",
@@ -289,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 18,
    "id": "a10107fb",
    "metadata": {},
    "outputs": [],
@@ -332,8 +309,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 19,
    "id": "af2ba041",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = prepare_youtube()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8e88f03f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_pickle('first_stage_prepped.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "20fac388",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #converts the age category timedelta into hours .. so the videos are x hours old now \n",
+    "# df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n",
+    "\n",
+    "# df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
+    "# df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
+    "# df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n",
+    "\n",
+    "# df.reset_index(inplace=True)\n",
+    "# df.drop(columns='index', inplace=True)\n",
+    "# df.to_pickle('prepared.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4cf6bf62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def final_prep():\n",
+    "    \"\"\" \n",
+    "    Purpose:\n",
+    "        To create final dataframe for project usage\n",
+    "    ---\n",
+    "    Parameters:\n",
+    "        none\n",
+    "    ---\n",
+    "    Returns:\n",
+    "        df: final data frame for eda and modeling \n",
+    "    \"\"\"\n",
+    "    #calls function to import semi-prepared data frame\n",
+    "    df = prepare_youtube()\n",
+    "\n",
+    "    #converts the age category timedelta into hours .. so the videos are x hours old now \n",
+    "    df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n",
+    "\n",
+    "    #converts channel_age to days\n",
+    "    df.channel_age = pd.to_datetime(df.channel_age, utc=True)\n",
+    "    fresh = pd.to_datetime('2022-11-02', utc=True)\n",
+    "    df.channel_age = abs(fresh - df.channel_age)\n",
+    "    df.channel_age = df.channel_age.dt.days\n",
+    "\n",
+    "    #create features based on length of information within each specified column\n",
+    "    df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
+    "    df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
+    "    df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n",
+    "\n",
+    "    #creates metrics based on video count\n",
+    "    df['content_rate'] = df.video_count / df.channel_age\n",
+    "\n",
+    "    #creates metric based on view count and subscriber relationship\n",
+    "    df['views_per_sub'] = df.view_count/df.subscribers\n",
+    "    \n",
+    "    df.reset_index(inplace=True)\n",
+    "\n",
+    "    df.drop(columns='index', inplace=True)\n",
+    "\n",
+    "    #creates local pickle file for future usage in order to save time. else at 2+hr creation process \n",
+    "    df.to_pickle('prepared.pkl')\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "65ce78a1",
    "metadata": {},
    "outputs": [
     {
@@ -476,29 +543,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_43800/3837152935.py:17: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
+      "/var/folders/x7/9w9mh0fd73zg4jr8l_9v9h840000gn/T/ipykernel_55487/3467306406.py:16: FutureWarning: The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "  df.tags = df.tags.str.replace('|',\" \")\n"
      ]
     }
    ],
    "source": [
-    "df = prepare_youtube()"
+    "df = final_prep()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "id": "8e88f03f",
+   "execution_count": 24,
+   "id": "cd746e8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_pickle('first_stage_prepped.pkl')"
+    "pesty = pd.read_pickle('prepared.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "eee4da08",
+   "execution_count": 26,
+   "id": "c30ea785",
    "metadata": {},
    "outputs": [
     {
@@ -506,8 +573,8 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2019 entries, 0 to 2018\n",
-      "Data columns (total 32 columns):\n",
+      "RangeIndex: 2019 entries, 0 to 2018\n",
+      "Data columns (total 37 columns):\n",
       " #   Column                   Non-Null Count  Dtype              \n",
       "---  ------                   --------------  -----              \n",
       " 0   video_id                 2019 non-null   object             \n",
@@ -529,10 +596,10 @@
       " 16  region                   2019 non-null   object             \n",
       " 17  rank                     2019 non-null   int64              \n",
       " 18  top_25                   2019 non-null   int64              \n",
-      " 19  channel_age              2019 non-null   object             \n",
+      " 19  channel_age              2019 non-null   int64              \n",
       " 20  subscribers              2019 non-null   int64              \n",
       " 21  video_count              2019 non-null   int64              \n",
-      " 22  age                      2019 non-null   timedelta64[ns]    \n",
+      " 22  age                      2019 non-null   float64            \n",
       " 23  engagement               2019 non-null   float64            \n",
       " 24  sponsored                2019 non-null   int64              \n",
       " 25  num_of_tags              2019 non-null   int64              \n",
@@ -542,128 +609,19 @@
       " 29  title_in_description     2019 non-null   int64              \n",
       " 30  title_in_tags            2019 non-null   int64              \n",
       " 31  pct_tags_in_description  2019 non-null   float64            \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(2), int64(12), object(12), timedelta64[ns](1)\n",
-      "memory usage: 543.7+ KB\n"
+      " 32  title_lengths            2019 non-null   int64              \n",
+      " 33  desc_lengths             2019 non-null   int64              \n",
+      " 34  tags_length              2019 non-null   int64              \n",
+      " 35  content_rate             2019 non-null   float64            \n",
+      " 36  views_per_sub            2019 non-null   float64            \n",
+      "dtypes: bool(3), datetime64[ns, UTC](2), float64(5), int64(16), object(11)\n",
+      "memory usage: 542.3+ KB\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "pesty.info()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "id": "20fac388",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#converts the age category timedelta into hours .. so the videos are x hours old now \n",
-    "df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "id": "56831135",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
-    "df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
-    "df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "id": "9a29a744",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.reset_index(inplace=True)\n",
-    "df.drop(columns='index', inplace=True)\n",
-    "df.to_pickle('prepared.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "id": "4cf6bf62",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def final_prep(df):\n",
-    "    \"\"\" \n",
-    "    Purpose:\n",
-    "        To create final dataframe for project usage\n",
-    "    ---\n",
-    "    Parameters:\n",
-    "        none\n",
-    "    ---\n",
-    "    Returns:\n",
-    "        df: final data frame for eda and modeling \n",
-    "    \"\"\"\n",
-    "    #calls function to import semi-prepared data frame\n",
-    "    #df = prepare_youtube()\n",
-    "\n",
-    "    #converts the age category timedelta into hours .. so the videos are x hours old now \n",
-    "    df.age = (df.age.dt.days * 24) + (df.age.dt.seconds/3600)\n",
-    "\n",
-    "    #converts channel_age to days\n",
-    "    df.channel_age = pd.to_datetime(df.channel_age, utc=True)\n",
-    "    fresh = pd.to_datetime('2022-11-02', utc=True)\n",
-    "    df.channel_age = abs(fresh - df.channel_age)\n",
-    "    df.channel_age = df.channel_age.dt.days\n",
-    "\n",
-    "    #create features based on length of information within each specified column\n",
-    "    df['title_lengths'] = df[\"title\"].apply(lambda x: len(x))\n",
-    "    df['desc_lengths'] = df[\"description\"].apply(lambda x: 0 if pd.isnull(x) else len(x))\n",
-    "    df['tags_length'] = df['tags'].apply(lambda x: len(x.replace('|', '')) if x != '[none]' else 0)\n",
-    "\n",
-    "    #creates metrics based on video count\n",
-    "    df['content_rate'] = df.video_count / df.channel_age\n",
-    "\n",
-    "    #creates metric based on view count and subscriber relationship\n",
-    "    df['views_per_sub'] = df.view_count/df.subscribers\n",
-    "    \n",
-    "    df.reset_index(inplace=True)\n",
-    "\n",
-    "    df.drop(columns='index', inplace=True)\n",
-    "\n",
-    "    #creates local pickle file for future usage in order to save time. else at 2+hr creation process \n",
-    "    df.to_pickle('prepared.pkl')\n",
-    "\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 195,
-   "id": "65ce78a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = final_prep(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 196,
-   "id": "cd746e8f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pesty = pd.read_pickle('prepared.pkl')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c34032a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
