--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3319,6 +3319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "# Phase Two"
    ]
   },
@@ -3327,14 +3328,16 @@
    "metadata": {},
    "source": [
     "## Channel Age\n",
-    "Min age of channel with trending and top 25\n",
-    "Max age of channel with trending and top 25\n",
-    "Avg age of channels with trending and top 25\n"
+    "Min age of channel with trending and top 25 \n",
+    "\n",
+    "Max age of channel with trending and top 25 \n",
+    "\n",
+    "Avg age of channels with trending and top 25 \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,42 +3349,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fresh = pd.to_datetime('2022-11-02', utc=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       3213\n",
-       "1       3604\n",
-       "2       3561\n",
-       "3       3159\n",
-       "4       4178\n",
-       "        ... \n",
-       "2014    2299\n",
-       "2015    2302\n",
-       "2016    3323\n",
-       "2017     997\n",
-       "2018    3968\n",
-       "Name: channel_age, Length: 2019, dtype: int64"
+       "count     2019.000000\n",
+       "mean      2717.790986\n",
+       "std       1627.344576\n",
+       "min          6.000000\n",
+       "25%       1406.500000\n",
+       "50%       2550.000000\n",
+       "75%       3809.000000\n",
+       "max      19298.000000\n",
+       "Name: channel_age, dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.channel_age"
+    "df.channel_age.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2550.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.channel_age.median()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask = df.top_25 == 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     374.000000\n",
+       "mean     2662.229947\n",
+       "std      1537.291286\n",
+       "min        36.000000\n",
+       "25%      1476.250000\n",
+       "50%      2461.000000\n",
+       "75%      3643.000000\n",
+       "max      6249.000000\n",
+       "Name: channel_age, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[mask].channel_age.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count     1645.000000\n",
+       "mean      2730.423100\n",
+       "std       1647.318573\n",
+       "min          6.000000\n",
+       "25%       1383.000000\n",
+       "50%       2573.000000\n",
+       "75%       3864.000000\n",
+       "max      19298.000000\n",
+       "Name: channel_age, dtype: float64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~mask].channel_age.describe()"
    ]
   },
   {
@@ -3512,35 +3588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['video_id', 'title', 'publishedAt', 'channelTitle', 'categoryId',\n",
-       "       'trending_date', 'tags', 'view_count', 'likes', 'comment_count',\n",
-       "       'thumbnail_link', 'comments_disabled', 'ratings_disabled',\n",
-       "       'description', 'duration', 'captions', 'region', 'rank', 'top_25',\n",
-       "       'channel_age', 'subscribers', 'video_count', 'age', 'engagement',\n",
-       "       'sponsored', 'num_of_tags', 'word_bank', 'cleaned_tags', 'cleaned_desc',\n",
-       "       'title_in_description', 'title_in_tags', 'pct_tags_in_description',\n",
-       "       'title_lengths', 'desc_lengths', 'tags_length', 'content_rate'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3548,10 +3596,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    2019.000000\n",
+       "mean        9.238918\n",
+       "std       223.058439\n",
+       "min         0.007329\n",
+       "25%         0.155500\n",
+       "50%         0.370158\n",
+       "75%         0.930189\n",
+       "max      9527.315789\n",
+       "Name: views_per_sub, dtype: float64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.views_per_sub.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    374.000000\n",
+       "mean       1.585702\n",
+       "std       11.765638\n",
+       "min        0.007855\n",
+       "25%        0.149078\n",
+       "50%        0.322632\n",
+       "75%        0.768287\n",
+       "max      222.530088\n",
+       "Name: views_per_sub, dtype: float64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[mask].views_per_sub.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1645.000000\n",
+       "mean       10.978919\n",
+       "std       247.034978\n",
+       "min         0.007329\n",
+       "25%         0.160285\n",
+       "50%         0.376449\n",
+       "75%         0.991794\n",
+       "max      9527.315789\n",
+       "Name: views_per_sub, dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[~mask].views_per_sub.describe()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Channel Release Informatin"
+    "## Channel Release Information"
    ]
   },
   {
@@ -3562,11 +3694,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "BT Sport               6\n",
+       "beIN SPORTS France     6\n",
+       "Sun TV                 6\n",
+       "Vijay Television       6\n",
+       "Sony SAB               5\n",
+       "                      ..\n",
+       "Viralbollywood         1\n",
+       "Venga La Alegría       1\n",
+       "Ric                    1\n",
+       "letsdig18              1\n",
+       "탐구생활 - 돈이 되는 삶의 이야기    1\n",
+       "Name: channelTitle, Length: 1679, dtype: int64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.channelTitle.value_counts()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Do channels release videos in multiple categories? "
+    "Do channels release trending videos in multiple categories? "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -3587,68 +3757,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#df['views_per_video'] = df.view_count / df.video_count\n",
     "df['content_rate'] = df.video_count / df.channel_age"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "video_id                                                         bbl7oKjOw1U\n",
-       "title                      シーズン15 アプデ徹底検証！RE-45が絶対炎上レベルの強さｗｗ ランページ大人気間違いな...\n",
-       "publishedAt                                        2022-11-01 20:11:42+00:00\n",
-       "channelTitle                                                          TIE Ru\n",
-       "categoryId                                                            Gaming\n",
-       "trending_date                                      2022-11-02 00:00:00+00:00\n",
-       "tags                       TIE Ru ゲーム実況 PCゲーム Apex Legends エーペックスレジェンズ Ap...\n",
-       "view_count                                                            313545\n",
-       "likes                                                                   4899\n",
-       "comment_count                                                            596\n",
-       "thumbnail_link                https://i.ytimg.com/vi/bbl7oKjOw1U/default.jpg\n",
-       "comments_disabled                                                      False\n",
-       "ratings_disabled                                                       False\n",
-       "description                ►►『Twitter』 - https://twitter.com/Poulmt►►お仕事/...\n",
-       "duration                                                                 965\n",
-       "captions                                                               False\n",
-       "region                                                                    JP\n",
-       "rank                                                                       1\n",
-       "top_25                                                                     1\n",
-       "channel_age                                                               92\n",
-       "subscribers                                                           795000\n",
-       "video_count                                                             2211\n",
-       "age                                                                    3.805\n",
-       "engagement                                                          0.023228\n",
-       "sponsored                                                                  0\n",
-       "num_of_tags                                                                9\n",
-       "word_bank                  [►, ►, Twitter, 』, https://twitter.com/Poulmt►...\n",
-       "cleaned_tags               {TIE, PCゲーム, Legend, あぺ, ゲーム実況, Legends, Ru, A...\n",
-       "cleaned_desc               {』 - https://twitter.com/Poulmt►►お仕事/タイアップ案件のご...\n",
-       "title_in_description                                                       0\n",
-       "title_in_tags                                                              0\n",
-       "pct_tags_in_description                                                  0.0\n",
-       "title_lengths                                                             63\n",
-       "desc_lengths                                                             187\n",
-       "tags_length                                                               65\n",
-       "ch_views_per_video                                                141.811398\n",
-       "Name: 4, dtype: object"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[4]"
    ]
   },
   {
