--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -42,64 +42,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2019 entries, 0 to 2018\n",
-      "Data columns (total 35 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 2019 non-null   object             \n",
-      " 1   title                    2019 non-null   object             \n",
-      " 2   publishedAt              2019 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             2019 non-null   object             \n",
-      " 4   categoryId               2019 non-null   object             \n",
-      " 5   trending_date            2019 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     2019 non-null   object             \n",
-      " 7   view_count               2019 non-null   int64              \n",
-      " 8   likes                    2019 non-null   int64              \n",
-      " 9   comment_count            2019 non-null   int64              \n",
-      " 10  thumbnail_link           2019 non-null   object             \n",
-      " 11  comments_disabled        2019 non-null   bool               \n",
-      " 12  ratings_disabled         2019 non-null   bool               \n",
-      " 13  description              2019 non-null   object             \n",
-      " 14  duration                 2019 non-null   int64              \n",
-      " 15  captions                 2019 non-null   bool               \n",
-      " 16  region                   2019 non-null   object             \n",
-      " 17  rank                     2019 non-null   int64              \n",
-      " 18  top_25                   2019 non-null   int64              \n",
-      " 19  channel_age              2019 non-null   object             \n",
-      " 20  subscribers              2019 non-null   int64              \n",
-      " 21  video_count              2019 non-null   int64              \n",
-      " 22  age                      2019 non-null   float64            \n",
-      " 23  engagement               2019 non-null   float64            \n",
-      " 24  sponsored                2019 non-null   int64              \n",
-      " 25  num_of_tags              2019 non-null   int64              \n",
-      " 26  word_bank                2019 non-null   object             \n",
-      " 27  cleaned_tags             2019 non-null   object             \n",
-      " 28  cleaned_desc             2019 non-null   object             \n",
-      " 29  title_in_description     2019 non-null   int64              \n",
-      " 30  title_in_tags            2019 non-null   int64              \n",
-      " 31  pct_tags_in_description  2019 non-null   float64            \n",
-      " 32  title_lengths            2019 non-null   int64              \n",
-      " 33  desc_lengths             2019 non-null   int64              \n",
-      " 34  tags_length              2019 non-null   int64              \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(3), int64(15), object(12)\n",
-      "memory usage: 510.8+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
@@ -3725,18 +3667,152 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "channelTitle                 categoryId   \n",
+       "beIN SPORTS France           Sports           6\n",
+       "BT Sport                     Sports           6\n",
+       "Vijay Television             Entertainment    6\n",
+       "Sun TV                       Entertainment    6\n",
+       "HAR PAL GEO                  Entertainment    5\n",
+       "Sony SAB                     Entertainment    5\n",
+       "DAZN UEFA Champions League   Sports           5\n",
+       "ARY Digital HD               Entertainment    5\n",
+       "Problems                     Gaming           4\n",
+       "NBA                          Sports           4\n",
+       "Colors Rishtey               Entertainment    4\n",
+       "STAR भारत                    Entertainment    4\n",
+       "Sourav Joshi Vlogs           People_Blogs     4\n",
+       "StarPlus                     Entertainment    4\n",
+       "Матч ТВ                      Sports           4\n",
+       "Zee Tamil                    Entertainment    4\n",
+       "Enaldinho                    Entertainment    4\n",
+       "FORMULA 1                    Sports           4\n",
+       "Star Maa                     Entertainment    3\n",
+       "Hora do Faro                 Entertainment    3\n",
+       "DAZN Fußball International   Sports           3\n",
+       "아는형님 Knowingbros             Entertainment    3\n",
+       "Ligue 1 Uber Eats            Sports           3\n",
+       "アスリートアカデミア【岡崎郁 公式チャンネル】      People_Blogs     3\n",
+       "g1                           News_Politics    3\n",
+       "Sky Sport HD                 Sports           3\n",
+       "곽튜브KWAKTUBE                  Travel_Events    3\n",
+       "RMC Sport                    Sports           3\n",
+       "MasterChef Brasil            Entertainment    3\n",
+       "HYBE LABELS                  Music            3\n",
+       "CalebCity                    Comedy           3\n",
+       "Bastian                      Gaming           3\n",
+       "Newcastle United             Sports           3\n",
+       "SBT Sports                   Sports           3\n",
+       "Marca Claro                  Sports           3\n",
+       "KaanPhod Music               Music            3\n",
+       "슛포러브                         Sports           3\n",
+       "Mening Yurtim - MY5          News_Politics    3\n",
+       "コムドット                        Entertainment    3\n",
+       "リベンジャーズ REVENGER'S           Sports           3\n",
+       "Rafaella Baltar              Entertainment    3\n",
+       "Sky Sports Premier League    Sports           3\n",
+       "LCK                          Gaming           3\n",
+       "Milliy TV                    Entertainment    3\n",
+       "1theK Originals - 원더케이 오리지널  Entertainment    3\n",
+       "Athos                        Gaming           3\n",
+       "The CHOOM (더 춤)              Entertainment    3\n",
+       "Zé Vaqueiro                  Music            3\n",
+       "BANGTANTV                    Music            3\n",
+       "A Fazenda                    Entertainment    3\n",
+       "tvN SPORTS                   Gaming           3\n",
+       "Colors TV                    Entertainment    3\n",
+       "MaireWink                    Entertainment    3\n",
+       "ESPN Brasil                  Sports           3\n",
+       "TUDN México                  Sports           3\n",
+       "KeniaOSVEVO                  Music            3\n",
+       "TNT Sports México            Sports           3\n",
+       "TNT Sports Brasil            Sports           3\n",
+       "HUM TV                       Entertainment    3\n",
+       "THE K-POP                    Music            3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Do channels release trending videos in multiple categories? "
+    "df[['channelTitle', 'categoryId']].value_counts().head(60)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 2019 entries, 0 to 2018\n",
+      "Data columns (total 37 columns):\n",
+      " #   Column                   Non-Null Count  Dtype              \n",
+      "---  ------                   --------------  -----              \n",
+      " 0   video_id                 2019 non-null   object             \n",
+      " 1   title                    2019 non-null   object             \n",
+      " 2   publishedAt              2019 non-null   datetime64[ns, UTC]\n",
+      " 3   channelTitle             2019 non-null   object             \n",
+      " 4   categoryId               2019 non-null   object             \n",
+      " 5   trending_date            2019 non-null   datetime64[ns, UTC]\n",
+      " 6   tags                     2019 non-null   object             \n",
+      " 7   view_count               2019 non-null   int64              \n",
+      " 8   likes                    2019 non-null   int64              \n",
+      " 9   comment_count            2019 non-null   int64              \n",
+      " 10  thumbnail_link           2019 non-null   object             \n",
+      " 11  comments_disabled        2019 non-null   bool               \n",
+      " 12  ratings_disabled         2019 non-null   bool               \n",
+      " 13  description              2019 non-null   object             \n",
+      " 14  duration                 2019 non-null   int64              \n",
+      " 15  captions                 2019 non-null   bool               \n",
+      " 16  region                   2019 non-null   object             \n",
+      " 17  rank                     2019 non-null   int64              \n",
+      " 18  top_25                   2019 non-null   int64              \n",
+      " 19  channel_age              2019 non-null   int64              \n",
+      " 20  subscribers              2019 non-null   int64              \n",
+      " 21  video_count              2019 non-null   int64              \n",
+      " 22  age                      2019 non-null   float64            \n",
+      " 23  engagement               2019 non-null   float64            \n",
+      " 24  sponsored                2019 non-null   int64              \n",
+      " 25  num_of_tags              2019 non-null   int64              \n",
+      " 26  word_bank                2019 non-null   object             \n",
+      " 27  cleaned_tags             2019 non-null   object             \n",
+      " 28  cleaned_desc             2019 non-null   object             \n",
+      " 29  title_in_description     2019 non-null   int64              \n",
+      " 30  title_in_tags            2019 non-null   int64              \n",
+      " 31  pct_tags_in_description  2019 non-null   float64            \n",
+      " 32  title_lengths            2019 non-null   int64              \n",
+      " 33  desc_lengths             2019 non-null   int64              \n",
+      " 34  tags_length              2019 non-null   int64              \n",
+      " 35  views_per_sub            2019 non-null   float64            \n",
+      " 36  content_rate             2019 non-null   float64            \n",
+      "dtypes: bool(3), datetime64[ns, UTC](2), float64(5), int64(16), object(11)\n",
+      "memory usage: 542.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do channels release trending videos in multiple categories? No"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3771,6 +3847,78 @@
    "source": [
     "## Translation\n",
     "### Basic exploration \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Dictionary Creation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " #   Column                   Non-Null Count  Dtype              \n",
+    "---  ------                   --------------  -----              \n",
+    " 0   video_id                 2019 non-null   object             \n",
+    " 1   title                    2019 non-null   object             \n",
+    " 2   publishedAt              2019 non-null   datetime64\n",
+    " 3   channelTitle             2019 non-null   object             \n",
+    " 4   categoryId               2019 non-null   object             \n",
+    " 5   trending_date            2019 non-null   datetime64\n",
+    " 6   tags                     2019 non-null   object             \n",
+    " 7   view_count               2019 non-null   int64              \n",
+    " 8   likes                    2019 non-null   int64              \n",
+    " 9   comment_count            2019 non-null   int64              \n",
+    " 10  thumbnail_link           2019 non-null   object             \n",
+    " 11  comments_disabled        2019 non-null   bool               \n",
+    " 12  ratings_disabled         2019 non-null   bool               \n",
+    " 13  description              2019 non-null   object             \n",
+    " 14  duration                 2019 non-null   int64              \n",
+    " 15  captions                 2019 non-null   bool               \n",
+    " 16  region                   2019 non-null   object             \n",
+    " 17  rank                     2019 non-null   int64              \n",
+    " 18  top_25                   2019 non-null   int64              \n",
+    " 19  channel_age              2019 non-null   int64              \n",
+    " 20  subscribers              2019 non-null   int64              \n",
+    " 21  video_count              2019 non-null   int64              \n",
+    " 22  age                      2019 non-null   float64            \n",
+    " 23  engagement               2019 non-null   float64            \n",
+    " 24  sponsored                2019 non-null   int64              \n",
+    " 25  num_of_tags              2019 non-null   int64              \n",
+    " 26  word_bank                2019 non-null   object             \n",
+    " 27  cleaned_tags             2019 non-null   object             \n",
+    " 28  cleaned_desc             2019 non-null   object             \n",
+    " 29  title_in_description     2019 non-null   int64              \n",
+    " 30  title_in_tags            2019 non-null   int64              \n",
+    " 31  pct_tags_in_description  2019 non-null   float64            \n",
+    " 32  title_lengths            2019 non-null   int64              \n",
+    " 33  desc_lengths             2019 non-null   int64              \n",
+    " 34  tags_length              2019 non-null   int64              \n",
+    " 35  views_per_sub            2019 non-null   float64            \n",
+    " 36  content_rate             2019 non-null   float64     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'|    | #   | Column                  | Non-Null       | Count    | Dtype      |\\n|---:|:----|:------------------------|:---------------|:---------|:-----------|\\n|  0 | --- | ------                  | -------------- | -----    |            |\\n|  1 | 0   | video_id                | 2019           | non-null | object     |\\n|  2 | 1   | title                   | 2019           | non-null | object     |\\n|  3 | 2   | publishedAt             | 2019           | non-null | datetime64 |\\n|  4 | 3   | channelTitle            | 2019           | non-null | object     |\\n|  5 | 4   | categoryId              | 2019           | non-null | object     |\\n|  6 | 5   | trending_date           | 2019           | non-null | datetime64 |\\n|  7 | 6   | tags                    | 2019           | non-null | object     |\\n|  8 | 7   | view_count              | 2019           | non-null | int64      |\\n|  9 | 8   | likes                   | 2019           | non-null | int64      |\\n| 10 | 9   | comment_count           | 2019           | non-null | int64      |\\n| 11 | 10  | thumbnail_link          | 2019           | non-null | object     |\\n| 12 | 11  | comments_disabled       | 2019           | non-null | bool       |\\n| 13 | 12  | ratings_disabled        | 2019           | non-null | bool       |\\n| 14 | 13  | description             | 2019           | non-null | object     |\\n| 15 | 14  | duration                | 2019           | non-null | int64      |\\n| 16 | 15  | captions                | 2019           | non-null | bool       |\\n| 17 | 16  | region                  | 2019           | non-null | object     |\\n| 18 | 17  | rank                    | 2019           | non-null | int64      |\\n| 19 | 18  | top_25                  | 2019           | non-null | int64      |\\n| 20 | 19  | channel_age             | 2019           | non-null | int64      |\\n| 21 | 20  | subscribers             | 2019           | non-null | int64      |\\n| 22 | 21  | video_count             | 2019           | non-null | int64      |\\n| 23 | 22  | age                     | 2019           | non-null | float64    |\\n| 24 | 23  | engagement              | 2019           | non-null | float64    |\\n| 25 | 24  | sponsored               | 2019           | non-null | int64      |\\n| 26 | 25  | num_of_tags             | 2019           | non-null | int64      |\\n| 27 | 26  | word_bank               | 2019           | non-null | object     |\\n| 28 | 27  | cleaned_tags            | 2019           | non-null | object     |\\n| 29 | 28  | cleaned_desc            | 2019           | non-null | object     |\\n| 30 | 29  | title_in_description    | 2019           | non-null | int64      |\\n| 31 | 30  | title_in_tags           | 2019           | non-null | int64      |\\n| 32 | 31  | pct_tags_in_description | 2019           | non-null | float64    |\\n| 33 | 32  | title_lengths           | 2019           | non-null | int64      |\\n| 34 | 33  | desc_lengths            | 2019           | non-null | int64      |\\n| 35 | 34  | tags_length             | 2019           | non-null | int64      |\\n| 36 | 35  | views_per_sub           | 2019           | non-null | float64    |\\n| 37 | 36  | content_rate            | 2019           | non-null | float64    |'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_clipboard().to_markdown()"
    ]
   }
  ],
