adding updated readme and final report to include wrangling takeaway updates

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -131,12 +131,13 @@
    "metadata": {},
    "source": [
     "##  Wrangling Takeaways\n",
-    "* ** VINCENT ** Insert\n",
-    "* Feature creation was large workload as scraping provided just basic info\n",
-    "* Had to generate features for further surface level insight\n",
-    "* Alot of time spent converting date into useable formats for exploration\n",
+    "* Using the Youtube API and Youtube Analytics API we pulled in base level statistics for videos and channels\n",
+    "* We planned this out using a API scraper and CRONtabs to automate the video scraping to occur every hour on the hour over a 3 day period.\n",
+    "* Videos pulled were all trending videos from 11 countries, videos pulled from each country were that country's respective top 200 trending videos.\n",
+    "* Format of some features from the API were a nuisance:\n",
     "  * Example: `duration` being a string\n",
-    "\n",
+    "  * Example: `categoryId` being a numerical value that had to be encoded to represent the category name.\n",
+    "  * Example: `trending_date` not being in the same format as `PublishedAt`\n",
     "### Nulls/Missing Values\n",
     "* Nulls found in `descriptions` were handled by filling with 'No Description\"\n",
     "\n",
@@ -931,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (main, Jun  1 2022, 06:34:44) \n[Clang 12.0.0 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
