amended typos, and adjusted formatting

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -156,7 +156,7 @@
    "id": "79b2976a",
    "metadata": {},
    "source": [
-    "# 3)Exploration\n",
+    "# 3) Exploration\n",
     "\n",
     "`What we did:`\n",
     "\n",
@@ -271,6 +271,7 @@
    "id": "1f191a05",
    "metadata": {},
    "source": [
+    "---\n",
     "## Spotlight - `Comment value/engament`\n",
     "\n",
     "\n",
@@ -293,11 +294,11 @@
    "id": "fd714f5a",
    "metadata": {},
    "source": [
-    "# 2. Does comment value and views have a corralantioin together??\n",
+    "# 2. Does comment value and views have a corralantion together??\n",
     "\n",
-    "`H0-`Comments and view have a high corralations\n",
+    "`H0-`Comments and view have a high corralation\n",
     "\n",
-    "`Ha-`Comments and views dont have high corraltions "
+    "`Ha-`Comments and views dont have high corraltion "
    ]
   },
   {
@@ -437,69 +438,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 2019 entries, 0 to 2018\n",
-      "Data columns (total 40 columns):\n",
-      " #   Column                   Non-Null Count  Dtype              \n",
-      "---  ------                   --------------  -----              \n",
-      " 0   video_id                 2019 non-null   object             \n",
-      " 1   title                    2019 non-null   object             \n",
-      " 2   publishedAt              2019 non-null   datetime64[ns, UTC]\n",
-      " 3   channelTitle             2019 non-null   object             \n",
-      " 4   categoryId               2019 non-null   object             \n",
-      " 5   trending_date            2019 non-null   datetime64[ns, UTC]\n",
-      " 6   tags                     2019 non-null   object             \n",
-      " 7   view_count               2019 non-null   int64              \n",
-      " 8   likes                    2019 non-null   int64              \n",
-      " 9   comment_count            2019 non-null   int64              \n",
-      " 10  thumbnail_link           2019 non-null   object             \n",
-      " 11  comments_disabled        2019 non-null   bool               \n",
-      " 12  ratings_disabled         2019 non-null   bool               \n",
-      " 13  description              2019 non-null   object             \n",
-      " 14  duration                 2019 non-null   int64              \n",
-      " 15  captions                 2019 non-null   bool               \n",
-      " 16  region                   2019 non-null   object             \n",
-      " 17  rank                     2019 non-null   int64              \n",
-      " 18  top_25                   2019 non-null   int64              \n",
-      " 19  channel_age              2019 non-null   int64              \n",
-      " 20  subscribers              2019 non-null   int64              \n",
-      " 21  video_count              2019 non-null   int64              \n",
-      " 22  age                      2019 non-null   float64            \n",
-      " 23  engagement               2019 non-null   float64            \n",
-      " 24  sponsored                2019 non-null   int64              \n",
-      " 25  num_of_tags              2019 non-null   int64              \n",
-      " 26  word_bank                2019 non-null   object             \n",
-      " 27  cleaned_tags             2019 non-null   object             \n",
-      " 28  cleaned_desc             2019 non-null   object             \n",
-      " 29  title_in_description     2019 non-null   int64              \n",
-      " 30  title_in_tags            2019 non-null   int64              \n",
-      " 31  pct_tags_in_description  2019 non-null   float64            \n",
-      " 32  title_lengths            2019 non-null   int64              \n",
-      " 33  desc_lengths             2019 non-null   int64              \n",
-      " 34  tags_length              2019 non-null   int64              \n",
-      " 35  content_rate             2019 non-null   float64            \n",
-      " 36  views_per_sub            2019 non-null   float64            \n",
-      " 37  clean                    2019 non-null   object             \n",
-      " 38  stemmed                  2019 non-null   object             \n",
-      " 39  lemmatized               2019 non-null   object             \n",
-      "dtypes: bool(3), datetime64[ns, UTC](2), float64(5), int64(16), object(14)\n",
-      "memory usage: 589.7+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -584,6 +522,8 @@
    "id": "8a2c3bcf",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## Spotlight - `Category`\n",
     "\n",
     "\n",
@@ -714,6 +654,7 @@
    "id": "bbb26285",
    "metadata": {},
    "source": [
+    "---\n",
     "## Spotlight - `Bigrams`\n",
     "\n",
     "\n",
@@ -822,6 +763,7 @@
    "id": "ab55f3c4",
    "metadata": {},
    "source": [
+    "---\n",
     "## Spotlight - `Total count`\n",
     "\n",
     "\n",
@@ -914,6 +856,8 @@
    "id": "50c43da9",
    "metadata": {},
    "source": [
+    "---\n",
+    "\n",
     "## Spotlight - `Region activities`\n",
     "\n",
     "\n",
@@ -931,7 +875,7 @@
    "id": "902934df",
    "metadata": {},
    "source": [
-    "# `Hypotheses6:`Are some region more active then others??? for example likes/views"
+    "# `Hypotheses6:`Are some regions more active then others??? for example likes/views"
    ]
   },
   {
@@ -987,7 +931,8 @@
     "- Entertainment might have been the highest overall but doesnt mean it was liked/or viewed the most. Just means most videos are categories as entertainment\n",
     "- Music/Entertainment have the highest words count but it could be because they both take up at least 15 percent and above of the whole dataframe\n",
     "- Region effect on trending video alot because in some country music isnt the highest or entertainment \n",
-    "- Having the comments enabled doesnt really effect the like/views to high so i think it doesnt matter if the video is bad or good as longest it gets views or some likes.\n"
+    "- Having the comments enabled doesnt really effect the like/views to high so i think it doesnt matter if the video is bad or good as longest it gets views or some likes.\n",
+    "---"
    ]
   },
   {
