--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -774,7 +774,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Modeling\n",
+    "# 4) Modeling\n",
     "After analyzing the Top 200 trending Youtube videos, Exploration phase identified arrays of possible drivers of Top 25 trending Youtube videos. In this section, we will create a machine learning algorithm model that better and accurately predicts Top 25 trending Youtube videos and to use our takeaways and recommendations with an eye towards enabling smaller creators to produce in the mode of the top 25.\n",
     "\n",
     "Top_25 is our target variable\n",
