amended shorter_explore

--- a/shorter_explore.ipynb
+++ b/shorter_explore.ipynb
@@ -789,6 +789,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.DataFrame(all_vid_desc).to_csv('word_vault.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 165,
    "metadata": {},
    "outputs": [
