amended README and final report

--- a/final_report.ipynb
+++ b/final_report.ipynb
@@ -191,7 +191,7 @@
    "id": "63a57ece",
    "metadata": {},
    "source": [
-    "### Question: Are videos with disabled comments obtaining more views the none disable comments:\n",
+    "### Question: Are videos with disabled comments obtaining more views than videos with comments enabled?\n",
     "\n",
     "`H0 -` There is a relationship between view counts and comments being disabled.\n",
     "\n",
